--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-version = '0.0.1-SNAPSHOT'
+// version = '0.0.1'
 sourceCompatibility = 1.8
 
 repositories {
