--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ before_script:
 
 build:
   stage: build
-  script: `pwd`/.gradlew --build-cache build
+  script: ./gradlew --build-cache build
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: push
@@ -27,7 +27,7 @@ build:
 
 test:
   stage: test
-  script: `pwd`/.gradlew
+  script: ./gradlew
   cache:
     key: "$CI_COMMIT_REF_NAME"
     policy: pull
